<resources>
    <string name="app_name">Practica Geolocalizacion</string>
    <string name="text_view_titulo">Obtener Ubicación de Usuario</string>
    <string name="text_view_latitud">Latitud</string>
    <string name="text_view_longitud">Longitud</string>
    <string name="text_view_direccion">Dirección</string>
    <string name="button_obtener">Obtener Coordenadas</string>
    <string name="button_whatsapp">Compartir por Whatsapp</string>
    <string name="button_map">Ver Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>